--- a/inst/tutorials/lezione_02_vettori/lezione_02_vettori.html
+++ b/inst/tutorials/lezione_02_vettori/lezione_02_vettori.html
@@ -695,16 +695,16 @@ learnr:::store_exercise_cache(structure(list(global_setup = structure(c("library
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "letter-a-1", question = structure("A quale classe appartiene num_char", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_c246453", 
+"character")), answers = list(structure(list(id = "lnr_ans_3f9fbe5", 
     option = "numeric", value = "numeric", label = structure("numeric", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_7886e71", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_35d8542", 
     option = "logic", value = "logic", label = structure("logic", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_4fe79a3", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_d21a7b6", 
     option = "character", value = "character", label = structure("character", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_693e46a", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_80f2f9d", 
     option = "R", value = "R", label = structure("R", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
 "tutorial_quiz_answer"))), button_labels = list(submit = structure("<span data-i18n=\"button.questionsubmit\">Submit Answer<\u002fspan>", html = TRUE, class = c("html", 
@@ -715,22 +715,22 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
 "character")), message = NULL, post_message = NULL), ids = list(
     answer = "letter-a-1-answer", question = "letter-a-1"), loading = structure("<strong>Loading:<\u002fstrong> \nA quale classe appartiene num_char\n<br/><br/><br/>", html = TRUE, class = c("html", 
 "character")), random_answer_order = TRUE, allow_retry = TRUE, 
-    seed = 751177574.150206, options = list()), class = c("learnr_radio", 
+    seed = 719387567.665009, options = list()), class = c("learnr_radio", 
 "tutorial_question")), session = session)
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "letter-a-2", question = structure("A quale classe appartiene num_logical", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_d4086c2", 
+"character")), answers = list(structure(list(id = "lnr_ans_c934d94", 
     option = "character", value = "character", label = structure("character", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_2f953b3", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_5f90499", 
     option = "logic", value = "logic", label = structure("logic", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_48df6c", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_aa84886", 
     option = "numeric", value = "numeric", label = structure("numeric", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_1680572", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_d5ad115", 
     option = "R", value = "R", label = structure("R", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
 "tutorial_quiz_answer"))), button_labels = list(submit = structure("<span data-i18n=\"button.questionsubmit\">Submit Answer<\u002fspan>", html = TRUE, class = c("html", 
@@ -741,22 +741,22 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
 "character")), message = NULL, post_message = NULL), ids = list(
     answer = "letter-a-2-answer", question = "letter-a-2"), loading = structure("<strong>Loading:<\u002fstrong> \nA quale classe appartiene num_logical\n<br/><br/><br/>", html = TRUE, class = c("html", 
 "character")), random_answer_order = TRUE, allow_retry = TRUE, 
-    seed = 152462107.429004, options = list()), class = c("learnr_radio", 
+    seed = 1515787679.29416, options = list()), class = c("learnr_radio", 
 "tutorial_question")), session = session)
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "letter-a-3", question = structure("A quale classe appartiene char_logical", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_2feb2b2", 
+"character")), answers = list(structure(list(id = "lnr_ans_f94617a", 
     option = "numeric", value = "numeric", label = structure("numeric", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_e067df", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_7494415", 
     option = "logic", value = "logic", label = structure("logic", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_d897612", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_67b8cef", 
     option = "character", value = "character", label = structure("character", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_1f7fcce", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_501444b", 
     option = "R", value = "R", label = structure("R", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
 "tutorial_quiz_answer"))), button_labels = list(submit = structure("<span data-i18n=\"button.questionsubmit\">Submit Answer<\u002fspan>", html = TRUE, class = c("html", 
@@ -767,22 +767,22 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
 "character")), message = NULL, post_message = NULL), ids = list(
     answer = "letter-a-3-answer", question = "letter-a-3"), loading = structure("<strong>Loading:<\u002fstrong> \nA quale classe appartiene char_logical\n<br/><br/><br/>", html = TRUE, class = c("html", 
 "character")), random_answer_order = TRUE, allow_retry = TRUE, 
-    seed = 1935103000.5989, options = list()), class = c("learnr_radio", 
+    seed = 1488072061.80706, options = list()), class = c("learnr_radio", 
 "tutorial_question")), session = session)
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "letter-a-4", question = structure("A quale classe appartiene tricky", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_a46ae05", 
+"character")), answers = list(structure(list(id = "lnr_ans_906ee89", 
     option = "numeric", value = "numeric", label = structure("numeric", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_2128a45", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_46e1f9e", 
     option = "logic", value = "logic", label = structure("logic", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_a20f503", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_a36065a", 
     option = "character", value = "character", label = structure("character", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_db19e4c", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_9c87932", 
     option = "R", value = "R", label = structure("R", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
 "tutorial_quiz_answer"))), button_labels = list(submit = structure("<span data-i18n=\"button.questionsubmit\">Submit Answer<\u002fspan>", html = TRUE, class = c("html", 
@@ -793,25 +793,25 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
 "character")), message = NULL, post_message = NULL), ids = list(
     answer = "letter-a-4-answer", question = "letter-a-4"), loading = structure("<strong>Loading:<\u002fstrong> \nA quale classe appartiene tricky\n<br/><br/><br/>", html = TRUE, class = c("html", 
 "character")), random_answer_order = TRUE, allow_retry = TRUE, 
-    seed = 337501647.342839, options = list()), class = c("learnr_radio", 
+    seed = 1865886808.13113, options = list()), class = c("learnr_radio", 
 "tutorial_question")), session = session)
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "letter-a-5", question = structure("Come abbiamo visto, se creaiamo dei vettori con elementi misti, questi vengono &#39;costretti&#39; in una singola classe. Sapresti indicare la priorità delle diverse classi", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_cebaff3", 
+"character")), answers = list(structure(list(id = "lnr_ans_3e476d1", 
     option = "character > logical > numeric", value = "character > logical > numeric", 
     label = structure("character &gt; logical &gt; numeric", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_6ef1b5f", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_d2e045e", 
     option = "logic > character > numeric", value = "logic > character > numeric", 
     label = structure("logic &gt; character &gt; numeric", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_37a8e47", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_b8745a0", 
     option = "character > numeric > logical", value = "character > numeric > logical", 
     label = structure("character &gt; numeric &gt; logical", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_55d07df", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_3585f4a", 
     option = "numeric > character > logical", value = "numeric > character > logical", 
     label = structure("numeric &gt; character &gt; logical", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
@@ -823,7 +823,7 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
 "character")), message = NULL, post_message = NULL), ids = list(
     answer = "letter-a-5-answer", question = "letter-a-5"), loading = structure("<strong>Loading:<\u002fstrong> \nCome abbiamo visto, se creaiamo dei vettori con elementi misti, questi vengono &#39;costretti&#39; in una singola classe. Sapresti indicare la priorità delle diverse classi\n<br/><br/><br/>", html = TRUE, class = c("html", 
 "character")), random_answer_order = TRUE, allow_retry = TRUE, 
-    seed = 2011199254.06346, options = list()), class = c("learnr_radio", 
+    seed = 1222594639.93069, options = list()), class = c("learnr_radio", 
 "tutorial_question")), session = session)
 </script>
  
@@ -1133,7 +1133,7 @@ learnr:::store_exercise_cache(structure(list(global_setup = structure(c("library
 <!--/html_preserve-->
 <!--html_preserve-->
 <script type="application/shiny-prerendered" data-context="execution_dependencies">
-{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45]}},"value":[{"type":"character","attributes":{},"value":["backports","base","bslib","checkmate","cli","compiler","curl","datasets","digest","ellipsis","evaluate","fastmap","graphics","grDevices","htmltools","htmlwidgets","httpuv","jquerylib","jsonlite","knitr","later","learnr","lifecycle","magrittr","markdown","methods","mime","promises","R6","Rcpp","rlang","rmarkdown","rprojroot","rstudioapi","sass","shiny","stats","stringi","stringr","tools","utils","withr","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["1.2.1","4.0.1","0.2.5.1","2.0.0","3.0.1","4.0.1","4.3.2","4.0.1","0.6.27","0.3.2","0.14","1.1.0","4.0.1","4.0.1","0.5.2.9000","1.5.3","1.6.2","0.1.4","1.7.2","1.33","1.3.0","0.10.1.9015","1.0.0","2.0.1","1.1","4.0.1","0.11","1.2.0.1","2.5.1","1.0.7","0.4.11.9001","2.10","2.0.2","0.13","0.4.0","1.6.0","4.0.1","1.7.4","1.4.0","4.0.1","4.0.1","2.4.2","0.25","1.8-4","2.2.1"]}]}]}
+{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45]}},"value":[{"type":"character","attributes":{},"value":["backports","base","bslib","checkmate","cli","compiler","curl","datasets","digest","ellipsis","evaluate","fastmap","graphics","grDevices","htmltools","htmlwidgets","httpuv","jquerylib","jsonlite","knitr","later","learnr","lifecycle","magrittr","markdown","methods","mime","promises","R6","Rcpp","rlang","rmarkdown","rprojroot","rstudioapi","sass","shiny","stats","stringi","stringr","tools","utils","withr","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["1.2.1","4.0.1","0.2.5.1","2.0.0","3.0.1","4.0.1","4.3.2","4.0.1","0.6.28","0.3.2","0.14","1.1.0","4.0.1","4.0.1","0.5.2.9000","1.5.3","1.6.2","0.1.4","1.7.2","1.33","1.3.0","0.10.1.9015","1.0.0","2.0.1","1.1","4.0.1","0.11","1.2.0.1","2.5.1","1.0.7","0.4.11.9001","2.10","2.0.2","0.13","0.4.0","1.6.0","4.0.1","1.7.4","1.4.0","4.0.1","4.0.1","2.4.2","0.25","1.8-4","2.2.1"]}]}]}
 </script>
 <!--/html_preserve-->
 </div>
