--- a/inst/tutorials/lezione_02_manipolazione/lezione_02_manipolazione.html
+++ b/inst/tutorials/lezione_02_manipolazione/lezione_02_manipolazione.html
@@ -109,7 +109,7 @@ if (window.hljs) {
 <div id="section-select" class="section level2">
 <h2>Select</h2>
 <div class="tutorial-exercise" data-label="df1" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
-<pre class="text"><code># Usantdo la tibble chiamata penguins seleziona le colonne 1, 5, 8
+<pre class="text"><code># Usando la tibble chiamata penguins seleziona le colonne 1, 5, 8
 # Usa la funziona select e il pipe opetator %&gt;%
 
 penguins %&gt;% 
@@ -117,16 +117,15 @@ penguins %&gt;%
 <script type="application/json" data-ui-opts="1">{"engine":"r","has_checker":false,"caption":"<span data-i18n=\"text.enginecap\" data-i18n-opts=\"{&quot;engine&quot;:&quot;R&quot;}\">R Code<\/span>"}</script>
 </div>
 <div class="tutorial-exercise-support" data-label="df1-hint-1" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
-<pre class="text"><code># Sostituisci i numeri hai trattini</code></pre>
+<pre class="text"><code># Sostituisci i numeri ai trattini</code></pre>
 </div>
 <div class="tutorial-exercise-support" data-label="df1-hint-2" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
-<pre class="text"><code># In alternativa puoi usare le funzioni nrow() e ncol()</code></pre>
+
 </div>
 <div class="tutorial-exercise-support" data-label="df1-hint-3" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
 <pre class="text"><code># La soluzione è
-dim(penguins)
-ncol(penguins)
-nrow(penguins)</code></pre>
+penguins %&gt;% 
+    select(1, 5, 8)</code></pre>
 </div>
 
 <script type="application/shiny-prerendered" data-context="server-start">
@@ -165,7 +164,7 @@ learnr:::store_exercise_cache(structure(list(global_setup = structure(c("library
     include = FALSE, indent = "    ")), setup = "penguins <- palmerpenguins::penguins\n", 
     chunks = list(list(label = "df1-setup", code = "penguins <- palmerpenguins::penguins\n", 
         opts = list(label = "\"df1-setup\"", echo = "FALSE"), 
-        engine = "r"), list(label = "df1", code = "# Usantdo la tibble chiamata penguins seleziona le colonne 1, 5, 8\n# Usa la funziona select e il pipe opetator %>%\n\npenguins %>% \n    select(___, ___, ___)", 
+        engine = "r"), list(label = "df1", code = "# Usando la tibble chiamata penguins seleziona le colonne 1, 5, 8\n# Usa la funziona select e il pipe opetator %>%\n\npenguins %>% \n    select(___, ___, ___)", 
         opts = list(label = "\"df1\"", exercise = "TRUE"), engine = "r")), 
     code_check = NULL, error_check = NULL, check = NULL, solution = NULL, 
     options = list(eval = FALSE, echo = TRUE, results = "markup", 
@@ -184,7 +183,7 @@ learnr:::store_exercise_cache(structure(list(global_setup = structure(c("library
         aniopts = "controls,loop", warning = TRUE, error = FALSE, 
         message = TRUE, render = NULL, ref.label = NULL, child = NULL, 
         engine = "r", split = FALSE, include = TRUE, purl = TRUE, 
-        max.print = 1000, label = "df1", exercise = TRUE, code = c("# Usantdo la tibble chiamata penguins seleziona le colonne 1, 5, 8", 
+        max.print = 1000, label = "df1", exercise = TRUE, code = c("# Usando la tibble chiamata penguins seleziona le colonne 1, 5, 8", 
         "# Usa la funziona select e il pipe opetator %>%", "", 
         "penguins %>% ", "    select(___, ___, ___)"), out.width.px = 624, 
         out.height.px = 384, params.src = "df1, exercise=TRUE", 
